<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_10per">10%</string>
    <string name="btn_15per">15%</string>
    <string name="btn_20per">20%</string>
    <string name="etCheckAmount">Cost of Food</string>
    <string name="tv_tip_amount">Tip is:</string>
    <string name="tip_display_amount">$00.00</string>
    <string name="tip_label">Tip is:</string>

</resources>
