<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TipcalcActivity" >

    <EditText
        android:id="@+id/etCheckAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/etCheckAmount" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn20Per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15Per"
        android:layout_alignBottom="@+id/btn15Per"
        android:layout_toRightOf="@+id/btn15Per"
        android:onClick="onClickTipButtonHandler"
        android:hint="@string/btn_20per"
        android:text="@string/btn_20per" />

    <Button
        android:id="@+id/btn15Per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn10Per"
        android:layout_alignBottom="@+id/btn10Per"
        android:layout_centerHorizontal="true"
        android:onClick="onClickTipButtonHandler"
        android:hint="@string/btn_15per"
        android:text="@string/btn_15per" />

    <Button
        android:id="@+id/btn10Per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCheckAmount"
        android:layout_marginTop="88dp"
        android:layout_toLeftOf="@+id/btn15Per"
        android:onClick="onClickTipButtonHandler"
        android:text="@string/btn_10per" />

    <TextView
        android:id="@+id/tvTipIs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn10Per"
        android:layout_below="@+id/btn15Per"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="97dp"
        android:hint="@string/tip_label"
        android:text="@string/tip_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipIs"
        android:layout_alignBottom="@+id/tvTipIs"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/tvTipIs"
        android:hint="@string/tip_display_amount"
        android:text="@string/tip_display_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
